--- a/public/css/components/eventos/eventos.css
+++ b/public/css/components/eventos/eventos.css
@@ -1,5 +1,39 @@
+body {
+    width: 100vw;
+}
+
+.carousel {
+    border: solid yellow 5px;
+}
+
+.carousel-inner {
+    border: solid orange 5px;
+    margin: auto;
+}
+
+/* PRUEBA - ESTO ES TEMPORAL */
+.container1 {
+    width: 85%;
+    border: solid darkgreen 5px;
+}
+
+.carousel-caption {
+    margin: 0 auto;
+}
+
+.titulousalab {
+    width: 100%;
+    border: solid white 5px;
+}
+
+.img1 {
+   max-width: 100%;
+   border: solid whitesmoke 5px;
+}
+
 .eventos-window-container {
     display: flex;
     flex-wrap: wrap;
-    width: 1728px;
+    width: 100%;
+    border: solid red 5px;
 }
