--- a/public/css/components/eventos/lightBox_carousel.css
+++ b/public/css/components/eventos/lightBox_carousel.css
@@ -1,7 +1,8 @@
 /* Carousel */
 .contenedorImageText {
     display: flex;
-    width: 1126px;
+    /* width: 1126px; */
+    width: 100%;
     height: 114px;
     flex-direction: column;
     justify-content: center;
