--- a/public/css/components/eventos/ultimos-eventos.css
+++ b/public/css/components/eventos/ultimos-eventos.css
@@ -1,3 +1,25 @@
+.ultimos-eventos-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 3rem 0;
+    /* border: red solid 5px; */
+    /* box-sizing: border-box; */
+}
+
+.ultimos-eventos-title {
+    width: 30%;
+    /* border: solid purple 5px; */
+}
+
+.ultimos-eventos-title h2 {
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: clamp(40px, 3.5rem, 5vw);
+    font-weight: bold;
+}
+
 .TituloUltimosEventos {
     color: #000;
     text-align: center;
@@ -18,23 +40,37 @@
 }
 
 .ContenedorUltimosEventos {
-    display: flex;
+    /* display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    margin-top: 0px;
+    margin-top: 0px; */
+    width: 70%;
+    margin: 0 auto;
+    padding: 0;
+    /* border: purple solid 5px; */
 }
 
 /************ Contenedor cards de los eventos ***************/
 .eventosContainer {
-    width: 1576px;
-    height: 832px;
+    /* width: 1576px; */
+    width: 100%;
+    /* height: 832px; */
+    height: 60vh;
     overflow-x: auto;
     scrollbar-width: none;
-    margin-left: 152px;
-    margin-top: 80px;
+    /* margin-left: 152px; */
+    /* margin-top: 80px; */
     display: flex;
     gap: 24px;
+    /* right: 0; */
+    /* border: orange solid 5px; */
+    /* display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
+    gap: 2rem;
+    padding: 2rem 0;
+    overflow-x: auto;
+    scrollbar-width: none; */
 }
 
 .scroll-container {
@@ -44,8 +80,10 @@
 /************* Tarjetas ultimos eventos *************/
 .event-card {
     display: flex;
-    width: 624px;
-    height: 832px;
+    /* width: 624px; */
+    width: 40%;
+    /* height: 832px; */
+    height: 100%;
     flex-shrink: 0;
     border-radius: var(--Corner-Medium, 12px);
     background: rgba(94, 159, 186, 0.20);
@@ -56,7 +94,8 @@
 .title-event-card {
     color: #FFF;
     font-family: Montserrat;
-    font-size: 55px;
+    /* font-size: 55px; */
+    font-size: 1rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -88,7 +127,8 @@
 .text-event-card {
     color: #FFF;
     font-family: Montserrat;
-    font-size: 32px;
+    /* font-size: 32px; */
+    font-size: 1rem;
     font-style: normal;
     text-align: justify;
     font-weight: 500;
@@ -98,8 +138,10 @@
 
 /****** Contenido de la tarjetas ******/
 .content-event-card {
-    width: 528px;
-    height: 184px;
+    /* width: 528px; */
+    width: 100%;
+    /* height: 184px; */
+    /* height: 100%; */
     flex-shrink: 0;
 }
 
