--- a/public/css/components/servicios-academia/asesorias-especializadas.css
+++ b/public/css/components/servicios-academia/asesorias-especializadas.css
@@ -1,15 +1,23 @@
 /* Estilo del contenedor de la sección */
 .asesoriasEspecializadasContainer {
-    width: 1728px;
-    height: 1920px;
+    width: 100%;
+    max-width: 1728px;
+    min-height: 100vh;
+    /*height: 1920px;*/
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-content: flex-start;
 }
-
+@media (max-width: 1400px){
+    .asesoriasEspecializadasContainer{
+        margin-left: 5%;
+        width: 100%;
+    }
+}
 /* Estilo del titulo de la sección */
 .asesoriasEspecializadasTitle {
+    width: 100%;
     margin-top: 160px;
     margin-bottom: 80px;
     color: #000;
@@ -19,6 +27,7 @@
     font-weight: 700;
     line-height: normal;
     letter-spacing: 0.55px;
+    text-align: center;
 }
 
 /* Estilo del titulo de la subsección */
@@ -36,16 +45,22 @@
 
 /* Contenedor de las cards de la subsección "¿Cómo Solicitar Asesorías?" */
 .comoSolicitarAsesoriasCardsContainer {
-    width: 1692px;
+    width: 100%;
     height: 697px;
     display: flex;
     gap: 18px;
     box-sizing: border-box;
 }
-
+@media (max-width: 1400px) {
+    .comoSolicitarAsesoriasCardsContainer {
+        width: 100%;
+        gap: 28px;
+       
+    }
+}
 /* Estilo de las cards de la subsección "¿Qué ofrecemos?" */
 .comoSolicitarAsesoriasCard {
-    width: 552px;
+    width: 30%;
     height: 688px;
     flex-shrink: 1;
     border-radius: var(--Corner-Large, 16px);
@@ -63,8 +78,15 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     position: absolute;
     bottom: -9px;   /* El SVG está mal hecho */
+    width: 100%;
 }
-
+@media (max-width: 1400px) {    
+    .comoSolicitarAsesoriasCardFigure  {
+        width: 10%;   
+        left: 0;    
+       
+    }
+}
 /* Estilo para el titulo de la card */
 .comoSolicitarAsesoriasCardTitle {
     width: 380px;
@@ -81,7 +103,7 @@
 
 /* Estilo para el contenido de la card */
 .comoSolicitarAsesoriasCardContent {
-    width: 387px;
+    width: 100%;
     color: #FFF;
     font-family: Montserrat;
     font-size: 32px;
@@ -92,4 +114,11 @@
     position: absolute;
     bottom: 48px;
     left: 107px;
+}
+@media (max-width: 1400px) {
+    .comoSolicitarAsesoriasCardContent  {
+        width: 90%;      
+        font-size: 28px; 
+       
+    }
 }
