--- a/public/css/components/servicios-academia/desarrollo-de-cursos-especializados.css
+++ b/public/css/components/servicios-academia/desarrollo-de-cursos-especializados.css
@@ -1,11 +1,17 @@
 /* Estilo del contenedor de la sección */
 .desarrolloDeCursosEspecializadosContainer {
-    width: 1728px;
+    width: 100%;
     height: 1940px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-content: flex-start;
+}
+
+@media (max-width: 1400px){
+    .desarrolloDeCursosEspecializadosContainer{
+        width: 90%;
+    }
 }
 
 /* Estilo del titulo de la sección */
@@ -36,14 +42,20 @@
 
 /* Contenedor de las cards de la subsección "¿Qué ofrecemos?" */
 .queOfrecemosCardsContainer {
-    width: 1728px;
+    width: 100%;
     height: 718px;
     display: flex;
     overflow-x: hidden;
     gap: 64px;
     box-sizing: border-box;
 }
-
+@media (max-width: 1400px) {
+    .queOfrecemosCardsContainer {
+        width: 100%;
+        gap: 32px;
+       
+    }
+}
 /* Mostrar la barra de desplazamiento al hacer hover */
 .queOfrecemosCardsContainer:hover {
     overflow-x: auto;
@@ -52,16 +64,21 @@
 
 /* Estilo de las cards de la subsección "¿Qué ofrecemos?" */
 .queOfrecemosCard {
-    width: 552px;
+    width: 100%;
     height: 688px;
     flex-shrink: 1;
     border-radius: var(--Corner-Large, 16px);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    position: relative;
+   position: relative;
     display: flex;
     justify-content: center;
 }
-
+@media (max-width: 1400px) {
+    .queOfrecemosCard {
+        width: 80%;
+       
+    }
+}
 /* Estilos de la figura de la card */
 .queOfrecemosCardFigure {
     fill: rgba(18, 18, 56, 0.90);
