--- a/public/css/home.css
+++ b/public/css/home.css
@@ -28,12 +28,24 @@
     display: flex;
     justify-content: center;
 }
-
+/*1418*/
 /***** Linea separatoria *****/
 .line {
-    width: 1418px;
+    width: 100%;
+    max-width: 1418px;
     height: 0px;
     flex-shrink: 0;
     stroke-width: 3px;
     stroke: rgba(191, 191, 191, 0.20);
+}
+
+@media (max-width: 568px) {
+    .separador2 {
+        height: 80px;
+    }
+
+    .carousel img {
+        width: 100%;
+        height: auto;
+    }
 }
