--- a/public/css/components/investigacion/proyectos-actuales.css
+++ b/public/css/components/investigacion/proyectos-actuales.css
@@ -2,7 +2,7 @@
 
 /* Contenedor de la sección "Proyectos actuales" */
 .proyectos-actuales-container {
-    width: 1728px;
+    width: 100%;
     height: 1320px;
     display: grid;
 }
