--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,6 @@
 /******************************header*******************************/
-.container1 {
-    width: 1728px;
+/*.container1 {
+    width: 100%;
     height: auto;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -8,7 +8,70 @@
     opacity: 0;
     overflow: hidden;
     animation: aparecer 1s forwards;
+}*/
+@media (min-width: 1358px) and (min-height: 878px) {
+    .container1 {
+    width: 1768px; /* Fijamos el ancho a 1768px */
+    max-width: 100%; /* Evita que se desborde en pantallas más pequeñas */
+    height: auto;
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    margin: auto;
+    opacity: 0;
+    overflow: hidden;
+    animation: aparecer 1s forwards;
+    }
+    .titulousalab{
+        display: flex;
+        width: 100%;
+        height: 136px;
+        flex-direction: column;
+        justify-content: center;
+        flex-shrink: 0;
+        margin-bottom: -384px;
+        animation: titulousalab 1.5s forwards;
+    }
+    .titulousalabtxt {
+    color: #FFF;
+    text-align: center;
+    text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
+    font-family: Montserrat;
+    font-size: 80px;
+    font-style: normal;
+    font-weight:900;
+    line-height: 40px;
+    letter-spacing: 0.8px;
 }
+.contenidousalab {
+    width: 100%;
+    height: 248px;
+    background: rgba(192, 192, 192, 0.30);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    animation: contenidousalab 1.5s forwards;
+}
+.contenidousalabtxt {
+    width: 1268px; /* Fijamos el ancho a 1768px */
+    max-width: 80%;
+    max-height: 152px;
+    font-size: 28px;
+    line-height: 1.2;
+    text-align: justify;
+    color: #fcfeff;
+    font-family: Montserrat, sans-serif;
+    font-weight: 400;
+    letter-spacing: 0.32px;
+    margin: 0;
+    padding: 0;
+    flex-shrink: 1;
+    overflow: hidden; /* Evita que el texto se desborde */
+}
+
+
+}
+
 
 @keyframes aparecer {
     to {
@@ -419,9 +482,10 @@
 }
 
 /***********************Carrusel*********************/
+/*
 .titulousalab{
     display: flex;
-    width: 1152px;
+    width: 100%;
     height: 136px;
     flex-direction: column;
     justify-content: center;
@@ -429,18 +493,18 @@
     margin-bottom: -384px;
     animation: titulousalab 1.5s forwards;
 }
-
+*/
 @keyframes titulousalab {
     to {
-        margin-bottom: 104px;
+        margin-bottom: 120px;
     }
 }
 
 .img1{
     background: rgba(0, 0, 0, 0.30);
-    filter: brightness(50%);
+    filter: brightness(70%);
 }
-
+/*
 .titulousalabtxt {
     color: #FFF;
     text-align: center;
@@ -465,14 +529,14 @@
     align-items: center;
     animation: contenidousalab 1.5s forwards;
 }
-
+*/
 @keyframes contenidousalab {
     to{
-        margin-bottom: -40px;
+        margin-bottom: -20px;
     }
     
 }
-
+/*
 .contenidousalabtxt {
     width: 1392px;
     height: 152px;
@@ -486,6 +550,7 @@
     line-height: 40px;
     letter-spacing: 0.32px;
 }
+    */
 
 /********************************************************footer**************************************************************/
 footer {
