--- a/public/css/components/servicios-academia/objetivos-de-la-incorporacion-de-hci.css
+++ b/public/css/components/servicios-academia/objetivos-de-la-incorporacion-de-hci.css
@@ -1,10 +1,11 @@
 /* Estilo para el contenedor de la sección */
 .objetivosDeLaIncorporacionDeHciContainer {
-    width: 1728px;
+    width: 100%;
     /* height: 2147px; */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    overflow: hidden;
 }
 
 /* Estilo del titulo de la sección */
@@ -18,17 +19,34 @@
     line-height: normal;
     letter-spacing: 0.55px;
 }
-@media (max-width: 1300px) {
-    .objetivosDeLaIncorporacionDeHciTitle{
-        width: 80%;
-        text-align: left;/* Ajusta el margen para pantallas más pequeñas */
-    }
-}
+
 /* Estilo del conteedor de las cards de objetivos */
 .cardsObjetivosContainer {
+    
     margin-top: 80px;
     height: 1920px;
+    
     display: flex;
     flex-wrap: wrap;
     gap: 80px;
 }
+
+.objetivos-card {
+    background-image: url("{{ asset('img/formacion-interdiciplinaria.png') }}");
+    background-size: cover; /* Esto cubre todo el contenedor */
+    background-position: center; /* Esto centra la imagen dentro del contenedor */
+    background-repeat: no-repeat; /* Esto evita que la imagen se repita */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.objetivos-card img {
+    width: 100%;  /* Hace que la imagen ocupe todo el ancho del contenedor */
+    height: auto; /* Mantiene la proporción original de la imagen */
+    object-fit: contain;  /* Hace que la imagen cubra el contenedor sin distorsionarse */
+}
+
+
