--- a/public/css/components/eventos/lightBox_carousel.css
+++ b/public/css/components/eventos/lightBox_carousel.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: center;
     flex-shrink: 0;
+    border: solid lightblue 5px;
 }
 
 .tipografiaImageText {
@@ -14,10 +15,11 @@
     text-align: center;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-family: Montserrat;
-    font-size: 55px;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+    border: solid lightpink 5px;
 }
 
 /* --------- Animaciones del carousel --------- */
@@ -116,7 +118,7 @@
 @media (max-width: 768px) {
     .tipografiaImage1Text,
     .tipografiaImage2Text,
-    .tipografiaImage3Text {
+    .tipografiaIm5ge3Text {
         font-size: 45px; /* Reducir tamaño de títulos */
     }
 
