--- a/public/css/components/eventos/proximosEventos.css
+++ b/public/css/components/eventos/proximosEventos.css
@@ -15,6 +15,7 @@
     align-items: center;
     margin-top: 160px;
     margin-bottom: 0px;
+    border: solid purple 5px;
 }
 
 .ContenedorProximosEventos {
@@ -23,6 +24,7 @@
     align-items: center;
     flex-wrap: wrap;
     margin-top: 0px;
+    border: solid red 5px;
 }
 
 /*         Conferencias                   */
@@ -33,6 +35,7 @@
     align-items: center;
     flex-wrap: wrap;
     margin-top: 0px;
+    border: solid peru 5px;
 }
 
 .ContenedorSubtituloConferencias{
