--- a/public/css/components/eventos/eventos.css
+++ b/public/css/components/eventos/eventos.css
@@ -3,22 +3,22 @@ body {
 }
 
 .carousel {
-    border: solid darkcyan 5px;
 }
 
 .carousel-inner {
-    border: solid darkgreen 5px;
+    width: 100%;
     margin: auto;
 }
 
 /* PRUEBA - ESTO ES TEMPORAL */
 .container1 {
     width: 85%;
-    border: solid darkgreen 5px;
 }
 
 .carousel-caption {
     margin: 0 auto;
+    width: 100%;
+    border: solid orange 5px;
 }
 
 .titulousalab {
@@ -27,8 +27,8 @@ body {
 }
 
 .img1 {
-   max-width: 100%;
-   border: solid whitesmoke 5px;
+   width: 100%;
+   border: solid darkgray 5px;
 }
 
 .eventos-window-container {
@@ -36,4 +36,18 @@ body {
     flex-wrap: wrap;
     width: 100%;
     border: solid red 5px;
+}
+
+.contenidousalab {
+    width: 100%; 
+    height: 248px;
+    display: flex;
+    /* margin-bottom: -288px; */
+    /* margin-left: -260px; */
+    flex-shrink: 0;
+    background: rgba(192, 192, 192, 0.30);
+    justify-content: center;
+    align-items: center;
+    animation: contenidousalab 1.5s forwards;
+    border: solid yellow 5px;
 }
