--- a/public/css/components/eventos/proximosEventos.css
+++ b/public/css/components/eventos/proximosEventos.css
@@ -15,27 +15,21 @@
     align-items: center;
     margin-top: 160px;
     margin-bottom: 0px;
-    border: solid purple 5px;
 }
 
 .ContenedorProximosEventos {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
     margin-top: 0px;
-    border: solid red 5px;
+    width: 100%;
 }
 
-/*         Conferencias                   */
-
 .ContenedorConferencias{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
     margin-top: 0px;
-    border: solid peru 5px;
+    width: 100%;
 }
 
 .ContenedorSubtituloConferencias{
@@ -64,10 +58,9 @@
 
 .contenedorConferencistas {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+    flex-direction: column;
     margin-top: 0px;
+    width: 95%;
 }
 
 .subtituloConferencistas {
@@ -90,14 +83,12 @@
 }
 /************************Estilo para el contenedor de toda la subseccion conferencistas cards *********************/
 
-.contenedorCards {
-    position: relative;
-    width: 1509px;
-    height: 436px;
-    margin-top: 80px;
+.contenedorCardsEventos {
     display: flex;
-    gap: 37.91px;
-
+    justify-content: space-evenly;
+    width: 100%;
+    height: 35vh;
+    margin-top: 80px;
 }
 
 /************************Estilo para el separador a final de la seccion *********************/
