--- a/public/css/components/eventos/talleres.css
+++ b/public/css/components/eventos/talleres.css
@@ -31,11 +31,18 @@
 
 .contenedorTalleristas {
     display: flex;
+    flex-direction: column;
+    margin-top: 0px;
+    width: 95%;
+}
+
+/* .contenedorTalleristas {
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     margin-top: 0px;
-}
+} */
 
 .subtituloTalleristas {
     color: #000;
@@ -57,14 +64,21 @@
 }
 /************************Estilo para el contenedor de toda la subseccion conferencistas cards *********************/
 
-.contenedorCards {
+/* .contenedorCards {
     position: relative;
     width: 1509px;
     height: 436px;
     margin-top: 80px;
     display: flex;
     gap: 37.91px;
+} */
 
+.contenedorCards {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 35vh;
+    margin-top: 80px;
 }
 
 /************************Estilo para el separador a final de la seccion *********************/
