--- a/public/css/components/home/bienvenidos-usalab.css
+++ b/public/css/components/home/bienvenidos-usalab.css
@@ -1,9 +1,9 @@
 /****** Bienvenidos a UsaLab ******/
-/* Contenedor de la sección: "Bienvenidos a UsaLab"*/
+/* Contenedor de la sección: "Bienvenidos a UsaLab" */
 .bienvenidos-a-usalab-container {
     margin-top: 86px;
-    height: 442px;
-    width: 1728px;
+    height: auto; /* Ajusta la altura automáticamente */
+    width: 100%;
 }
 
 /* Titulo "Bienvenidos a UsaLab" */
@@ -20,7 +20,7 @@
 
 /* Contenido de la sección "Bienvenidos a UsaLab" */
 .content-bienvenidos-a-usalab {
-    width: 1728px;
+    width: 100%;
     height: 324px;
     flex-shrink: 0;
     background: url("../../../photos/bienvenidos-a-usalab.png") lightgray 50% / cover no-repeat;
@@ -31,7 +31,7 @@
 /* Texto de la sección "Bienvenidos a UsaLab" */
 .bienvenidos-a-usalab-text {
     margin-top: 53px;
-    width: 1544px;
+    width: 96%;
     height: 215px;
     flex-shrink: 0;
     color: #FFF;
@@ -44,12 +44,12 @@
     letter-spacing: 0.32px;
 }
 
-/****** Nuestra Historia ******/
+/** Nuestra Historia **/
 /* Contenedor de la sección: "Nuestra Historia"*/
 .nuestra-historia-container {
     margin-top: 45px;
     height: 426px;
-    width: 1728px;
+    width: 100%;
 }
 
 /* Titulo "Nuestra Historia" */
@@ -66,7 +66,7 @@
 
 /* Contenido de la sección "Nuestra Historia" */
 .content-nuestra-historia {
-    width: 1728px;
+    width: 100%;
     height: 324px;
     flex-shrink: 0;
     background: url("../../../photos/nuestra-historia.png") lightgray 50% / cover no-repeat;
@@ -77,7 +77,7 @@
 /* Texto de la sección "Nuestra Historia" */
 .nuestra-historia-text {
     margin-top: 39px;
-    width: 1544px;
+    width: 100%;
     height: 215px;
     flex-shrink: 0;
     color: #FFF;
@@ -89,16 +89,15 @@
     line-height: normal;
     letter-spacing: 0.32px;
 }
-
 /****** Experiencias ******/
-/* Contenedor de la sección: "Experiencias"*/
+/* Contenedor de la sección: "Experiencias" */
 .experiencias-container {
-    margin-top: 53px;
-    height: 434px;
-    width: 1728px;
+    margin-top: 45px;
+    height: 426px;
+    width: 100%;
 }
 
-/* Titulo "Experiencias" */
+/* Título "Experiencias" */
 .experiencias-title {
     color: #000;
     font-family: Montserrat;
@@ -112,18 +111,19 @@
 
 /* Contenido de la sección "Experiencias" */
 .content-experiencias {
-    width: 1728px;
+    width: 100%;
     height: 324px;
     flex-shrink: 0;
-    background: url("../../../photos/experiencias.jpg") lightgray 50% / cover no-repeat;
+    background: url("../../../photos/experiencias.jpg") center / cover no-repeat;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 /* Texto de la sección "Experiencias" */
 .experiencias-text {
-    margin-top: 38px;
-    width: 1544px;
+    margin-top: 39px;
+    width: 100%;
     height: 215px;
     flex-shrink: 0;
     color: #FFF;
