--- a/public/css/components/home/desarrollo-comercial.css
+++ b/public/css/components/home/desarrollo-comercial.css
@@ -1,7 +1,7 @@
 /****** Desarrollo comercial *****/
 .desarrollocomercial {
     margin-top: 160px;
-    width: 1728px;
+    width: 100%;
     height: 544px;
     flex-shrink: 0;
     overflow: hidden;
@@ -10,7 +10,6 @@
     flex-direction: column;
     align-items: center;
 }
-
 /***** Hover del boton de desarrollo comercial *****/
 .desarrollocomercial:hover .card-button {
     width: 308.7px;
@@ -22,13 +21,12 @@
 
 /****** Fondo mundo "desarrollo comercial" *****/
 .imagenmundo1 {
-    width: 1728px;
+    width: 100%;
     height: 544px;
     opacity: 0.5;
-    object-fit: cover;
+    object-fit: contain;
     flex-shrink: 0;
 }
-
 /**** Titulo "Desarrollo comercial" ****/
 .desarrollotitulo {
     display: flex;
@@ -48,7 +46,8 @@
 
 /**** Contenido "Desarrollo comercial" ****/
 .desarrollocontenido {
-    width: 1264px;
+    width: 100%;
+    max-width: 1264px;
     height: 112px;
     flex-shrink: 0;
     color: #FFFFFE;
