--- a/public/css/home.css
+++ b/public/css/home.css
@@ -31,7 +31,7 @@
 
 /***** Linea separatoria *****/
 .line {
-    width: 1418px;
+    width: 100%;
     height: 0px;
     flex-shrink: 0;
     stroke-width: 3px;
