--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,6 @@
 /******************************header*******************************/
 .container1 {
-    width: 1728px;
+    width: 100%;
     height: auto;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -17,7 +17,7 @@
 }
 
 .header {
-    width: 1728px;
+    width: 100%;
     height: 152px;
     flex-shrink: 0;
     display: flex;
@@ -419,9 +419,14 @@
 }
 
 /***********************Carrusel*********************/
+
+.carousel-caption{
+    left: 0%;
+    right: 0%;
+}
 .titulousalab{
     display: flex;
-    width: 1152px;
+    width: 100%;
     height: 136px;
     flex-direction: column;
     justify-content: center;
@@ -435,10 +440,10 @@
         margin-bottom: 104px;
     }
 }
-
 .img1{
     background: rgba(0, 0, 0, 0.30);
     filter: brightness(50%);
+    width: 100%;
 }
 
 .titulousalabtxt {
@@ -454,27 +459,18 @@
 }
 
 .contenidousalab {
-    width: 1728px;
+    width: 100%;
     height: 248px;
     display: flex;
     margin-bottom: -288px;
-    margin-left: -260px;
     flex-shrink: 0;
     background: rgba(192, 192, 192, 0.30);
     justify-content: center;
     align-items: center;
     animation: contenidousalab 1.5s forwards;
 }
-
-@keyframes contenidousalab {
-    to{
-        margin-bottom: -40px;
-    }
-    
-}
-
 .contenidousalabtxt {
-    width: 1392px;
+    width: 90%;
     height: 152px;
     flex-shrink: 0;
     color: #FFFCFC;
@@ -487,9 +483,17 @@
     letter-spacing: 0.32px;
 }
 
+@keyframes contenidousalab {
+    to{
+        margin-bottom: -40px;
+    }
+    
+}
+
+
 /********************************************************footer**************************************************************/
 footer {
-    width: 1728px;
+    width: 100%;
     height: 580px;
     flex-shrink: 0;
     opacity: 0.95;
