--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,7 +9,7 @@
     overflow: hidden;
     animation: aparecer 1s forwards;
 }*/
-@media (min-width: 1358px) and (min-height: 878px) {
+
     .container1 {
     width: 1768px; /* Fijamos el ancho a 1768px */
     max-width: 100%; /* Evita que se desborde en pantallas más pequeñas */
@@ -36,10 +36,10 @@
     text-align: center;
     text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
     font-family: Montserrat;
-    font-size: 80px;
+    font-size: 70px;
     font-style: normal;
     font-weight:900;
-    line-height: 40px;
+    line-height: 35px;
     letter-spacing: 0.8px;
 }
 .contenidousalab {
@@ -56,7 +56,7 @@
     width: 1268px; /* Fijamos el ancho a 1768px */
     max-width: 80%;
     max-height: 152px;
-    font-size: 28px;
+    font-size: 25px;
     line-height: 1.2;
     text-align: justify;
     color: #fcfeff;
@@ -70,7 +70,7 @@
 }
 
 
-}
+/*}*/
 
 
 @keyframes aparecer {
@@ -318,17 +318,7 @@
 }
 
 /*Seccion investigaciones*/
-.investigaciones {
-    display: flex;
-    width: 217px;
-    padding: 13.5px 15px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    box-sizing: border-box;
-    background: #06052D;
-    transition: background-color 0.5s ease;
-}
+
 
 .investigaciones:hover {
     background: #58A3C1;
