--- a/public/css/trabajemos-juntos.css
+++ b/public/css/trabajemos-juntos.css
@@ -20,6 +20,32 @@
     font-family: Montserrat;
     font-size: 40px;
     font-style: italic;
-    font-weight: 500;
+    font-weight: bold;
     line-height: normal;
+}
+@media (min-width: 1358px) and (min-height: 878px) {
+   
+    .carousel-caption {
+    width: 100%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.carousel-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ajusta la imagen para cubrir el contenedor sin distorsionarse */
+    display: block;
+}
+
+
+
+.descripcion-container {
+    text-align: center;
+    max-width: 800px; /* Opcional, para limitar el ancho del texto */
+    margin: 0 auto; /* Centra el bloque horizontalmente */
+    padding: 10px; /* Opcional, para mejorar la legibilidad */
+}
+
 }
