--- a/public/css/components/servicios-academia/asesorias-especializadas.css
+++ b/public/css/components/servicios-academia/asesorias-especializadas.css
@@ -64,14 +64,17 @@
 
 /* Estilos de la figura de la card */
 .comoSolicitarAsesoriasCardFigure {
+    display: flex;
+    align-items: flex-end; 
     fill: rgba(18, 18, 56, 0.90);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     position: absolute;
-    bottom: -9px;   /* El SVG está mal hecho */
-    width: 10%;
     margin-left: 0 ;
     left: 0;
+    width: 100%;
+    height: 100%;
 }
+
 
 /* Estilo para el titulo de la card */
 .comoSolicitarAsesoriasCardTitle {
@@ -92,7 +95,7 @@
     width: 80%;
     color: #FFF;
     font-family: Montserrat;
-    font-size: 32px;
+    font-size: 30px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -100,4 +103,10 @@
     position: absolute;
     bottom: 48px;
     left: 107px;
+}
+@media (max-width: 1560px){
+    .comoSolicitarAsesoriasCardContent{
+        font-size: 24px;
+        left: 50px;
+    }
 }
